--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,10 @@ dependencies {
     }
     compile(
             'io.springfox:springfox-swagger2:2.9.2',
-            'io.springfox:springfox-swagger-ui:2.9.2'
+            'io.springfox:springfox-swagger-ui:2.9.2',
+            'io.micrometer:micrometer-registry-prometheus:1.5.3',
+            'org.springframework.boot:spring-boot-starter-actuator:2.3.2.RELEASE',
+            'io.micrometer:micrometer-core:1.5.3'
     )
     testCompile(
             'org.spockframework:spock-core:1.2-groovy-2.4',
